<resources>
    <string name="app_name">gradeCheck</string>
    <string name="semester_title">Semester: </string>
    <string name="semester_class_title">Classes: </string>
    <string name="semester_season">Season: </string>
    <string name="semester_list_title">Semesters: </string>
    <string name="add_class">Add Class</string>
    <string name="add_semester">Add Semester</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_semester_season_hint">Enter the season of the school term.</string>
    <string name="add_semester_year">Year: </string>
    <string name="add_semester_year_hint">Enter the year of the school term.</string>
    <string name="class_title">Class:</string>
    <string name="class_assignment_title">Assignments: </string>
    <string name="class_course_name">Course Name: </string>
    <string name="class_breakdown">Breakdown: </string>
    <string name="class_breakdown_1">1. </string>
    <string name="class_breakdown_2">2. </string>
    <string name="class_breakdown_3">3. </string>
    <string name="class_breakdown_4">4. </string>
    <string name="class_breakdown_5">5. </string>
    <string name="class_breakdown_6">6. </string>
    <string name="Breakdown_Final">Final</string>
    <string name="class_grade_weight">Grade Weight: </string>
    <string name="class_grade_weight_A">A: </string>
    <string name="class_grade_weight_B">B: </string>
    <string name="class_grade_weight_C">C: </string>
    <string name="class_grade_weight_D">D: </string>
    <string name="class_grade_weight_F">F: </string>
    <string name="class_grade_weight_dash">-</string>
    <string name="class_grade_weight_percent">%</string>
    <string name="add_class_course_name_hint">Enter the name of the course.</string>
    <string name="add_class_breakdown_item_hint">Enter the item.</string>
    <string name="add_class_breakdown_weight_hint">Enter the weight.</string>
    <string name="add_class_breakdown_item_button">ADD</string>
    <string name="edit_Text">Edit</string>
    <string name="update_Text">Update</string>
    <string name="add_item">Add Item</string>
    <string name="assignment_name">Assignment Name:</string>
    <string name="assignment_grade">F</string>
    <string name="assignment_breakdown">Breakdown: </string>
    <string name="assignment_points_title">Points: </string>
    <string name="assignment_points">N/A</string>
    <string name="assignment_max_points_title">Max Points: </string>
    <string name="assignment_max_points">N/A</string>
    <string name="assignment_points_slash">/</string>
    <string name="add_assignment_name_hint">Enter the name of the assignment.</string>
    <string name='CourseBreakdownLabel1'>1 </string>
    <string name='CourseBreakdownLabel2'>2 </string>
    <string name='CourseBreakdownLabel3'>3 </string>
    <string name='CourseBreakdownLabel4'>4 </string>
    <string name='CourseBreakdownLabel5'>5 </string>
    <string name='CourseBreakdownLabelFinal'>Final</string>
    <string name="update_course">Update Course</string>
    <string name="assignment_list_grade">Grade:</string>
    <string name="update_assignment">Update Assignment</string>
    <string name="class_grade">Grade: </string>
    <string name="final_projections">Projection for desired final grade</string>
    <string name="final_projection_for_A_Label">A:</string>
    <string name="final_projection_for_B_Label">B:</string>
    <string name="final_projection_for_C_Label">C:</string>
    <string name="final_projection_for_A_percent">N/A</string>
    <string name="final_projection_for_B_percent">N/A</string>
    <string name="final_projection_for_C_percent">N/A</string>
</resources>