<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester_season"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/add_semester_season"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_semester_season_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_year"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/add_semester_year"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:hint="@string/add_semester_year_hint" />

    <Button
        android:id="@+id/add_semester_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_semester"
        android:enabled="false"/>

</LinearLayout>