<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_name"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/add_assignment_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/add_assignment_name_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_breakdown"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/add_assignment_breakdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:text="@string/assignment_points_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/add_assignment_current_points"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="125dp"
            android:layout_height="48dp"
            android:text="@string/assignment_max_points_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/add_assignment_maximum_points"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/add_assignment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_assignment"
        android:enabled="false"/>

</LinearLayout>